# aliquot-maf-tools

./: .cruft.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .snyk  .travis.yml  Dockerfile  Dockerfile.multistage  Jenkinsfile  Makefile  README.md  dev-requirements.in  dev-requirements.txt  docker-build.sh  justfile  pyproject.toml  repo-install.sh  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cruft.yml
aliquotmaf/: __init__.py  __main__.py  constants.py  logger.py
aliquotmaf/annotators/: __init__.py  annotator.py  cosmic.py  dbsnp_validation.py  entrez.py  gnomad.py  gnomad_vcf.py  hotspot.py  mutation_status.py  nontcga_exac.py  reference_context.py
aliquotmaf/converters/: builder.py  collection.py  formatters.py  utils.py
aliquotmaf/filters/: __init__.py  exac.py  filter_base.py  gdc_blacklist.py  gdc_pon.py  gnomad.py  multiallelic.py  nonexonic.py  normal_depth.py  offtarget.py
aliquotmaf/mask_merged_aliquot/: __main__.py
aliquotmaf/merge_aliquot/: __main__.py
aliquotmaf/merge_aliquot/merging/: filtering_iterator.py
aliquotmaf/merge_aliquot/merging/record_merger/: base.py
aliquotmaf/merge_aliquot/merging/record_merger/impl/: v1_0.py
aliquotmaf/merging/: filtering_iterator.py  overlap_set.py
aliquotmaf/merging/record_merger/: base.py  mixins.py
aliquotmaf/merging/record_merger/impl/: v1_0.py
aliquotmaf/metrics/: metrics_collection.py
aliquotmaf/runners/: base.py
aliquotmaf/runners/merge_aliquot/: __init__.py
aliquotmaf/runners/vcf_to_aliquot/: __init__.py  gdc_1_0_0_aliquot.py
aliquotmaf/subcommands/: base.py  utils.py
aliquotmaf/subcommands/mask_merged_aliquot/: __main__.py
aliquotmaf/subcommands/mask_merged_aliquot/runners/: __init__.py  base.py  gdc_1_0_0_aliquot_merged_masked.py  gdc_2_0_0_aliquot_merged_masked.py
aliquotmaf/subcommands/merge_aliquot/: __main__.py
aliquotmaf/subcommands/merge_aliquot/runners/: __init__.py  base.py  gdc_1_0_0_aliquot_merged.py  gdc_2_0_0_aliquot_merged.py
aliquotmaf/subcommands/merge_protected/: __main__.py
aliquotmaf/subcommands/merge_protected/runners/: __init__.py  base.py  gdc_1_0_0_merged_protected.py
aliquotmaf/subcommands/protected_to_public/: __main__.py
aliquotmaf/subcommands/protected_to_public/runners/: __init__.py  gdc_1_0_0_merged_public.py  gdc_1_2_0_public.py
aliquotmaf/subcommands/vcf_to_aliquot/: __main__.py
aliquotmaf/subcommands/vcf_to_aliquot/extractors/: __init__.py  base.py  effects.py  genotypes.py  location.py  population_frequency.py  variant_class.py
aliquotmaf/subcommands/vcf_to_aliquot/runners/: __init__.py  base.py  gdc_1_0_0_aliquot.py  gdc_2_0_0_aliquot.py
aliquotmaf/subcommands/vcf_to_protected/: __main__.py
aliquotmaf/subcommands/vcf_to_protected/extractors/: effects.py  genotypes.py  location.py  population_frequency.py  variant_class.py
aliquotmaf/subcommands/vcf_to_protected/runners/: __init__.py  gdc_1_0_1_protected.py  gdc_1_2_0_protected.py
aliquotmaf/utils/: utils.py
aliquotmaf/vcf_to_aliquot/: __main__.py  annotate.py  enums.py  extract.py  filter.py  filter_maf.py  transform.py  vcf.py
aliquotmaf/vcf_to_aliquot/aliquot/: __init__.py  base.py  gdc_1_0_0_aliquot.py
aliquotmaf/vcf_to_aliquot/annotators/: annotator.py  cosmic.py  dbsnp_validation.py  hotspot.py  mutation_status.py  nontcga_exac.py  reference_context.py
aliquotmaf/vcf_to_aliquot/converters/: builder.py  collection.py  utils.py
aliquotmaf/vcf_to_aliquot/extractors/: __init__.py  base.py  effects.py  genotypes.py  location.py  population_frequency.py  variant_class.py
aliquotmaf/vcf_to_aliquot/filters/: exac.py  filter_base.py  gdc_blacklist.py  gdc_pon.py  multiallelic.py  nonexonic.py  normal_depth.py  offtarget.py
extras/: biotype.priority.02282017.json  effect.priority.02282017.json
tests/: _conftest.py  conftest.py
tests/aliquotmaf/vcf_to_aliquot/: test_main.py  test_vcf.py  test_vcf_to_aliquot_maf.py
tests/aliquotmaf/vcf_to_aliquot/aliquot/: test_base.py
tests/aliquotmaf/vcf_to_aliquot/annotators/: test_cosmic.py  test_dbsnp_validation.py  test_exac.py  test_hotspot.py  test_mutation_status.py  test_reference_context.py
tests/aliquotmaf/vcf_to_aliquot/converters/: test_collection.py
tests/aliquotmaf/vcf_to_aliquot/extractors/: test_effects.py  test_genotypes.py  test_header.py  test_location.py  test_popfreq.py  test_variant_class.py
tests/aliquotmaf/vcf_to_aliquot/filters/: test_exac_freq.py  test_gdc_blacklist.py  test_gdc_pon.py  test_multiallelic.py  test_nonexonic.py  test_normal_depth.py  test_offtarget.py
tests/annotators/: conftest.py  test_cosmic.py  test_dbsnp_validation.py  test_entrez.py  test_exac.py  test_gnomad.py  test_gnomad_vcf.py  test_hotspot.py  test_mutation_status.py  test_reference_context.py
tests/data/: dbsnp_valstatus.db  ex1.vcf.gz.tbi  ex2.vcf.gz.tbi  ex3.vcf.gz.tbi  ex_entrez.json  fake_blacklist.tsv  fake_exac.vcf.gz.tbi  fake_hotspot.tsv  fake_noncancer_gnomad.vcf.gz.tbi  fake_regions.bed.gz.tbi  fake_regions_2.bed.gz.tbi
tests/data/gnomad/: gnomad_test.chr1.feather  gnomad_test.chr4.feather
tests/extractors/: test_effects.py  test_genotypes.py  test_header.py  test_location.py  test_popfreq.py  test_variant_class.py
tests/filters/: test_exac_freq.py  test_gdc_blacklist.py  test_gdc_pon.py  test_gnomad_filter.py  test_multiallelic.py  test_nonexonic.py  test_normal_depth.py  test_offtarget.py
tests/formatters/: test_collection.py  test_formatters.py
tests/merging/: conftest.py  test_maf_record_merger.py  test_overlap_set.py
tests/subcommands/: test_subcommand.py  test_vcf_to_aliquot_maf.py
