[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "aliquot-maf-tools"
description = "Scripts for producing aliquot-level MAF files"
authors = [
    {name = "Charles Czysz", email = "czysz@uchicago.edu"}
]
dependencies = [
 	"bioinf-maflib>=1.5.0",
        "pysam",
        "pandas",
        "pyarrow>=4.0.*"
]

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/NCI-GDC/aliquot-maf-tools"

[project.scripts]
aliquot_maf_tools = "aliqoutmaf.__main__:main"

[tool.flit.module]
name = "aliquotmaf"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_scheme = "release-branch-semver"
write_to = "aliquotmaf/_version.py"
fallback_version = "0"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py310']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
	"pandas"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["aliquotmaf"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
