[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "aliquot-maf-tools"
description = "Tools for creating and filtering aliquot-level MAFs"
authors = [
    {name = "Charles Czysz", email = "czysz@uchicago.edu"}
]

readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version"]
dependencies = [
    "click",
    "bioinf-maflib>=2.3.0",
    "pysam",
    "pandas",
    "pyarrow>=4.0",
]

[project.urls]
homepage = "https://github.com/NCI-GDC/aliquot-maf-tools"

[project.scripts]
"aliquotmaf" = "aliquotmaf.__main__:main"

[tool.setuptools_scm]
write_to = "aliquotmaf/_version.py"
local_scheme = "dirty-tag"
version_scheme = "python-simplified-semver"
fallback_version = "0"

[tool.coverage.run]
source = ["aliquotmaf"]
branch = true
parallel = true

[tool.flit.module]
name = "aliquotmaf"

[tool.flit.sdist]
include = ["aliquotmaf/_version.py"]
exclude = [
        ".*",
        "dev-requirements.*",
        "Dockerfile",
        "Jenkinsfile",
        "*travis.yml",
        "tox.ini",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.report]
show_missing = true
