[metadata]
name = bioinf-aliquotmaf
description = Aliquot maf tools
url = https://github.com/NCI-GDC/aliquot-maf-tools
author = Charles Czysz
author_email = czysz@uchicago.edu
python_requires = >=3.10
license_files =
	LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
        bioinf-maflib>=1.5.0
        pysam
        pandas
        pyarrow>=4.0.*

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	aliquot_maf_tools = aliquotmaf.__main__:main
